--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>新锐通航</title>
+  <link href="./static/img/logo-m.png" rel="shortcut icon" type="image/x-icon">
   <style>
  
   </style>
